📲 Attempt to fix overflow

--- a/assets/styles/hackathons/searchbar.css
+++ b/assets/styles/hackathons/searchbar.css
@@ -11,7 +11,6 @@
   background-color: rgba(255, 255, 255, 0.525);
   box-shadow: 0px 10px 15px 6px rgba(0, 0, 0, 0.1);
   color: black;
-  position: relative;
   align-items: center;
 }
 
